--- a/unbundl/t2/index.html
+++ b/unbundl/t2/index.html
@@ -160,7 +160,7 @@
         </div>
     </section>
     <footer>
-        <div class="brand-name">Näck</div>
+        <div class="brand-name">näck</div>
         <div class="subscribe">
             <h5>Subscribe</h5>
             <form>
