--- a/unbundl/t1/index.html
+++ b/unbundl/t1/index.html
@@ -1,1 +1,171 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Custom Product Pack</title>
+    <!-- Link to Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-dark bg-dark">
+        <!-- Use responsive utility classes to control alignment -->
+        <a class="navbar-brand mx-lg-auto" href="#">Custom Product Pack</a>
+        <div class="icons">
+            <a href="#" class="profile-icon"><i class="fas fa-user"></i></a>
+            <a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
+        </div>
+    </nav>
+    
 
+    <div class="container mt-5">
+        <div class="row">
+            <!-- Product cards go here -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product1.jpg" class="card-img-top" alt="Product 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 1</h5>
+                        <p class="card-text">Price: $10.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(0)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product2.jpg" class="card-img-top" alt="Product 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 2</h5>
+                        <p class="card-text">Price: $12.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(1)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product3.jpg" class="card-img-top" alt="Product 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 3</h5>
+                        <p class="card-text">Price: $8.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(2)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <!-- Add more product cards here -->
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product4.jpg" class="card-img-top" alt="Product 4">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 4</h5>
+                        <p class="card-text">Price: $9.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(3)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product5.jpg" class="card-img-top" alt="Product 5">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 5</h5>
+                        <p class="card-text">Price: $11.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(4)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product6.jpg" class="card-img-top" alt="Product 6">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 6</h5>
+                        <p class="card-text">Price: $7.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(5)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product7.jpg" class="card-img-top" alt="Product 7">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 7</h5>
+                        <p class="card-text">Price: $13.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(6)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product8.jpg" class="card-img-top" alt="Product 8">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 8</h5>
+                        <p class="card-text">Price: $6.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(7)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product9.jpg" class="card-img-top" alt="Product 9">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 9</h5>
+                        <p class="card-text">Price: $14.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(8)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product10.jpg" class="card-img-top" alt="Product 10">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 10</h5>
+                        <p class="card-text">Price: $5.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(9)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product11.jpg" class="card-img-top" alt="Product 11">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 11</h5>
+                        <p class="card-text">Price: $16.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(10)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card mb-4">
+                    <img src="product12.jpg" class="card-img-top" alt="Product 12">
+                    <div class="card-body">
+                        <h5 class="card-title">Product 12</h5>
+                        <p class="card-text">Price: $4.99</p>
+                        <button class="btn btn-primary" onclick="addToCustomPack(11)">Add to Pack</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="toast"></div>
+    <!-- <div id="custom-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="mr-auto">Notification</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            <span id="toast-message"></span>
+        </div>
+    </div> -->
+
+
+    <!-- Link to Bootstrap JS and Popper.js -->
+    <script src="https://kit.fontawesome.com/d185211dd1.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+</body>
+</html>
