--- a/unbundl/t1/index.html
+++ b/unbundl/t1/index.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-dark bg-dark">
         <!-- Use responsive utility classes to control alignment -->
-        <a class="navbar-brand mx-lg-auto" href="#">Custom Product Pack</a>
+        <a class="navbar-brand mx-lg-auto" href="#">Chocolate Factory</a>
         <div class="icons">
             <a href="#" class="profile-icon"><i class="fas fa-user"></i></a>
             <a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
@@ -25,9 +25,9 @@
             <!-- Product cards go here -->
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product1.jpg" class="card-img-top" alt="Product 1">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-16_1024x1024.png" class="card-img-top img-fluid" alt="Product 1">
                     <div class="card-body">
-                        <h5 class="card-title">Product 1</h5>
+                        <h5 class="card-title">Whittaker's</h5>
                         <p class="card-text">Price: $10.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(0)">Add to Pack</button>
                     </div>
@@ -35,9 +35,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product2.jpg" class="card-img-top" alt="Product 2">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-10_1024x1024.png" class="card-img-top img-fluid" alt="Product 2">
                     <div class="card-body">
-                        <h5 class="card-title">Product 2</h5>
+                        <h5 class="card-title">Toblerone</h5>
                         <p class="card-text">Price: $12.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(1)">Add to Pack</button>
                     </div>
@@ -45,9 +45,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product3.jpg" class="card-img-top" alt="Product 3">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-14_1024x1024.png" class="card-img-top img-fluid" alt="Product 3">
                     <div class="card-body">
-                        <h5 class="card-title">Product 3</h5>
+                        <h5 class="card-title">Hershey's</h5>
                         <p class="card-text">Price: $8.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(2)">Add to Pack</button>
                     </div>
@@ -56,9 +56,9 @@
             <!-- Add more product cards here -->
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product4.jpg" class="card-img-top" alt="Product 4">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-05_1024x1024.png" class="card-img-top img-fluid" alt="Product 4">
                     <div class="card-body">
-                        <h5 class="card-title">Product 4</h5>
+                        <h5 class="card-title">m&m's</h5>
                         <p class="card-text">Price: $9.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(3)">Add to Pack</button>
                     </div>
@@ -66,9 +66,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product5.jpg" class="card-img-top" alt="Product 5">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-11_1024x1024.png?v=1667373979" class="card-img-top img-fluid" alt="Product 5">
                     <div class="card-body">
-                        <h5 class="card-title">Product 5</h5>
+                        <h5 class="card-title">Maltesers</h5>
                         <p class="card-text">Price: $11.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(4)">Add to Pack</button>
                     </div>
@@ -76,9 +76,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product6.jpg" class="card-img-top" alt="Product 6">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-04_1024x1024.png" class="card-img-top img-fluid" alt="Product 6">
                     <div class="card-body">
-                        <h5 class="card-title">Product 6</h5>
+                        <h5 class="card-title">KitKat</h5>
                         <p class="card-text">Price: $7.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(5)">Add to Pack</button>
                     </div>
@@ -86,9 +86,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product7.jpg" class="card-img-top" alt="Product 7">
+                    <img src="https://cococart.in/cdn/shop/files/Chupa____200x300_aac4f742-b020-411a-84a2-7e383fe5f41d_1024x1024.png" class="card-img-top img-fluid" alt="Product 7">
                     <div class="card-body">
-                        <h5 class="card-title">Product 7</h5>
+                        <h5 class="card-title">Chupa Chups</h5>
                         <p class="card-text">Price: $13.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(6)">Add to Pack</button>
                     </div>
@@ -96,9 +96,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product8.jpg" class="card-img-top" alt="Product 8">
+                    <img src="https://cococart.in/cdn/shop/files/Werthers____200x300_69d6a938-d792-4e25-91dc-6c0e3c6e359e_1024x1024.png" class="card-img-top img-fluid" alt="Product 8">
                     <div class="card-body">
-                        <h5 class="card-title">Product 8</h5>
+                        <h5 class="card-title">Werther's Original</h5>
                         <p class="card-text">Price: $6.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(7)">Add to Pack</button>
                     </div>
@@ -106,9 +106,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product9.jpg" class="card-img-top" alt="Product 9">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-03_1024x1024.png" class="card-img-top img-fluid" alt="Product 9">
                     <div class="card-body">
-                        <h5 class="card-title">Product 9</h5>
+                        <h5 class="card-title">Godiva</h5>
                         <p class="card-text">Price: $14.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(8)">Add to Pack</button>
                     </div>
@@ -116,9 +116,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product10.jpg" class="card-img-top" alt="Product 10">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-02_1024x1024.png" class="card-img-top img-fluid" alt="Product 10">
                     <div class="card-body">
-                        <h5 class="card-title">Product 10</h5>
+                        <h5 class="card-title">E. Wedel</h5>
                         <p class="card-text">Price: $5.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(9)">Add to Pack</button>
                     </div>
@@ -126,9 +126,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product11.jpg" class="card-img-top" alt="Product 11">
+                    <img src="https://cococart.in/cdn/shop/files/200x300_Lindt-25_1024x1024.png" class="card-img-top img-fluid" alt="Product 11">
                     <div class="card-body">
-                        <h5 class="card-title">Product 11</h5>
+                        <h5 class="card-title">Lindt</h5>
                         <p class="card-text">Price: $16.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(10)">Add to Pack</button>
                     </div>
@@ -136,9 +136,9 @@
             </div>
             <div class="col-md-4">
                 <div class="card mb-4">
-                    <img src="product12.jpg" class="card-img-top" alt="Product 12">
+                    <img src="https://cococart.in/cdn/shop/files/200x300-01_1024x1024.png" class="card-img-top img-fluid" alt="Product 12">
                     <div class="card-body">
-                        <h5 class="card-title">Product 12</h5>
+                        <h5 class="card-title">Cadbury</h5>
                         <p class="card-text">Price: $4.99</p>
                         <button class="btn btn-primary" onclick="addToCustomPack(11)">Add to Pack</button>
                     </div>
@@ -148,18 +148,9 @@
     </div>
 
     <div id="toast"></div>
-    <!-- <div id="custom-toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-            <strong class="mr-auto">Notification</strong>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        <div class="toast-body">
-            <span id="toast-message"></span>
-        </div>
-    </div> -->
-
+    <footer class="copyright-footer text-center">
+        <p>&copy; 2023 Harshit Srivastava.</p>
+    </footer>
 
     <!-- Link to Bootstrap JS and Popper.js -->
     <script src="https://kit.fontawesome.com/d185211dd1.js" crossorigin="anonymous"></script>
