--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,7 @@
                     <b>Alarm Time:</b>
                     <div class="dropstart">
                         
-                        <!-- <label for="hours">Hr:</label> -->
+                        <label for="hours">Hr:</label>
                         <select name="hours" id="hours" required="">
                             <!-- <option value="" disabled selected>HR</option> -->
                             <option value="01">01</option>
@@ -36,7 +36,7 @@
                             <option value="12">12</option>
                         </select>
 
-                        <!-- <label for="minutes">Min:</label> -->
+                        <label for="minutes">Min:</label>
                         <select name="minutes" id="minutes" required="">
                             <!-- <option value="" disabled selected>MIN</option> -->
                             <option value="00">00</option>
@@ -101,7 +101,7 @@
                             <option value="59">59</option>
                         </select>
 
-                        <!-- <label for="seconds">Sec:</label> -->
+                        <label for="seconds">Sec:</label>
                         <select name="seconds" id="seconds" required="">
                             <!-- <option value="" disabled selected>SEC</option> -->
                             <option value="00">00</option>
