--- a/CN-Assignment-2/home.html
+++ b/CN-Assignment-2/home.html
@@ -14,7 +14,7 @@
             <div class="div-center">
                 <div class="brand-img">
                     <a class="navbar-brand" href="home.html">
-                        <img src="/images/i_logo.png" alt="logo" class="img-home">
+                        <img src="images/i_logo.png" alt="logo" class="img-home">
                     </a>
                 </div>
     
