--- a/CN-Assignment-2/index.html
+++ b/CN-Assignment-2/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar bg-body-tertiary navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="home.html">
-                    <img src="/images/i_logo.png" alt="logo" id="brand-name">
+                    <img src="images/i_logo.png" alt="logo" id="brand-name">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
