--- a/Nected_Assignment/index.html
+++ b/Nected_Assignment/index.html
@@ -14,7 +14,7 @@
 
     <main>
         <h1>Join My Workspace Workspace on Nected</h1>
-        <p class="invite_info">rb mn invite you to join My Workspace Workspace as an admin. Join now to start collaborating.</p>
+        <p class="invite_info">rb mn invited you to join My Workspace Workspace as an admin. Join now to start collaborating.</p>
         <button type="button" onclick=""> Join Now</button>
         <p class="question">Have a question? Connect with us <a href="#">here</a></p>
     </main>
